2004-11-22 Bart Hakvoort  <gparted@users.sf.net>

	* include/Utils.h: fixed crasher with unknown filesystems.

2004-11-22 Bart Hakvoort  <gparted@users.sf.net>

	* src/GParted_Core.cc: cosmetics
	* src/reiserfs.cc: make use of real commands instead of their symlinks. fixed copy of reiserfs filsystem
	  (the new size wasn't reported correctly)

2004-11-22 Bart Hakvoort  <gparted@users.sf.net>

	* src/ext2.cc,
	  src/ext3.cc: removed ':' from Blocksize scan.
	* src/reiserfs.cc: dumped progsreiserfs. From now on gparted uses the official namesystools (reiserfsprogs)
	  this resulted in much more reliable creation en resizing of reiserfs filesystems.

2004-11-21 Bart Hakvoort  <gparted@users.sf.net>

	* Again way too many chances to create a detailed entry (i'm glad i'm the only dev atm :P ).
	  Resizing of ext2/3 works perfect now. I've even tested it on the partition holding my SG seasons =)
	  Implemented checking of filesystems (only internally used atm).
	  Done some overall tweaking, finetuning etc.. release 0.0.7 is getting shape.

2004-11-19 Bart Hakvoort  <gparted@users.sf.net>

	* include/Device.h,
	  src/Device.cc: Removed bool Get_Any_Busy() in favor of public bool busy which is set in gparted_core.
	  This also fixed a small bug with incorrect mountdetection of logical partitions.
	  Also added a Reset() function to properly reset the contents of a device. to zero/empty .
	* include/GParted_Core.h,
	  src/GParted_Core.cc: 'busyness' of a device is now determined in get_devices().
	  Renamed get_partitions() to set_device_partitions to reflect its proper function.
	  When a new partition is created to contain a copied filesystem the size is now properly set. This fixes
	  a very annoying bug which no one knew about except for me =) .
	* src/Win_GParted.cc: use boolean busy from device instead of Get_Any_Busy() .

2004-11-17 Bart Hakvoort  <gparted@users.sf.net>

	* src/ext3.cc: availability of 'tune2fs' command wasn't detected correctly. fixed