@@ -1,3 +1,11 @@
+2004-11-23 Bart Hakvoort  <gparted@users.sf.net>
+
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc,
+	  src/Makefile.am,
+	  include/ntfs.h,
+	  src/ntfs.cc: added full ntfs support. (couldn't test it very will due to the absence of a win32 box :P )
+
 2004-11-22 Bart Hakvoort  <gparted@users.sf.net>
 
 	* include/Utils.h: fixed crasher with unknown filesystems.
